CSS fix for flickering

--- a/CSS/stylesheetStorage.css
+++ b/CSS/stylesheetStorage.css
@@ -6,7 +6,7 @@ html {
 body {
     z-index: -1;
     min-height: 100vh;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     overflow-y: auto;
 }
 
@@ -518,11 +518,11 @@ body {
 }
 
 #statusBoxWrapper {
-    position: absolute; 
+    position: fixed; 
     width: 25%;
     left:74%;
     top: 15%;
-    z-index: 2;
+    z-index: 3;
 }
 
 #statusBox {
@@ -900,6 +900,8 @@ ul {
     color: white;
 }
 
+/* ---------------------------------------------------------DROPAREA CSS-------------------------------------------------*/
+
 #dropArea {
     width: 100%;
     height: 100vh;
@@ -909,12 +911,15 @@ ul {
     position: fixed;
     left: 0;
     top: 0;
+    z-index: 5;
+    pointer-events: none;
 }
 
 #dropText {
     font-family: "Russo One",sans-serif;
     font-size: 3vh;
 }
+
 
 /* ---------------------------------------------------------MOBILE CSS-------------------------------------------------*//*
 @media (max-width: 1000px) {
